# AbEpiTope-1.0

./: .gitignore  MANIFEST.in  README.md  demo.ipynb  demo_notebook.ipynb  pyproject.toml  requirements.txt  setup.py  test.py
abepitope/: biopdb_utilities.py  esmif1_utilities.py  main.py  utilities.py
antiinternet/: biopdb_utilities.py  esmif1_utilities.py  main.py
encodings/: 1pkq_ag_J_ab_F_G_unrelaxed_rank_001_alphafold2_multimer_v3_model_3_seed_004_2024.pickle  1pkq_ag_J_ab_F_G_unrelaxed_rank_002_alphafold2_multimer_v3_model_3_seed_000_2024.pickle  1pkq_ag_J_ab_F_G_unrelaxed_rank_003_alphafold2_multimer_v3_model_3_seed_002_2024.pickle  1pkq_ag_J_ab_F_G_unrelaxed_rank_004_alphafold2_multimer_v3_model_3_seed_005_2024.pickle  1pkq_ag_J_ab_F_G_unrelaxed_rank_005_alphafold2_multimer_v3_model_3_seed_003_2024.pickle  1pkq_ag_J_ab_F_G_unrelaxed_rank_006_alphafold2_multimer_v3_model_5_seed_000_2024.pickle  1pkq_ag_J_ab_F_G_unrelaxed_rank_007_alphafold2_multimer_v3_model_5_seed_005_2024.pickle  1pkq_ag_J_ab_F_G_unrelaxed_rank_008_alphafold2_multimer_v3_model_2_seed_002_2024.pickle  1pkq_ag_J_ab_F_G_unrelaxed_rank_009_alphafold2_multimer_v3_model_1_seed_002_2024.pickle  1pkq_ag_J_ab_F_G_unrelaxed_rank_010_alphafold2_multimer_v3_model_1_seed_005_2024.pickle  1pkq_ag_J_ab_F_G_unrelaxed_rank_011_alphafold2_multimer_v3_model_1_seed_004_2024.pickle  1pkq_ag_J_ab_F_G_unrelaxed_rank_012_alphafold2_multimer_v3_model_1_seed_000_2024.pickle  1pkq_ag_J_ab_F_G_unrelaxed_rank_013_alphafold2_multimer_v3_model_1_seed_001_2024.pickle  1pkq_ag_J_ab_F_G_unrelaxed_rank_014_alphafold2_multimer_v3_model_4_seed_005_2024.pickle  1pkq_ag_J_ab_F_G_unrelaxed_rank_015_alphafold2_multimer_v3_model_1_seed_003_2024.pickle  1pkq_ag_J_ab_F_G_unrelaxed_rank_016_alphafold2_multimer_v3_model_4_seed_003_2024.pickle  (+18 more)
(+70 files in other folders)
