[build-system]
requires = ["setuptools>=42.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abepitope"
version = "0.1"
description = "AbEpiTope"
readme = "README.md"
requires-python = "==3.9.*"
authors = [
  { name = "Joakim Clifford", email = "cliffordjoakim@gmail.com" }
]
dependencies = [
  "fair-esm==2.0.0",
  "biopython==1.80",
  "biotite==0.34",
  "pygam==0.9.0",
  "numpy==1.24.*",
  "hmmer==3.4.0.0",

  "torch==1.11.0+cu113",

  "torch-geometric==2.0.4",
  "torch-scatter==2.0.9",
  "torch-sparse==0.6.14",
  "torch-cluster==1.6.0",
  "torch-spline-conv==1.2.1",

  # replacement for conda cudatoolkit=11.3
  "nvidia-cuda-runtime-cu11==11.7.99",
  "nvidia-cusparse-cu11==11.7.4.91",
  "nvidia-cublas-cu11==11.10.3.66",
  "nvidia-cufft-cu11==10.9.0.58",
  "nvidia-curand-cu11==10.2.10.91",
  "nvidia-cusolver-cu11==11.4.0.1",
  "nvidia-nvtx-cu11==11.7.91",
]

[project.urls]
Homepage = "https://github.com/mnielLab/AbEpiTope-1.0.git"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
abepitope = [
  "models/abepiscore1.0/*.pt",
  "models/abepitarget1.0/*.pt",
  "models/hmm_antibody_identification/*.hmm",
]

[tool.uv.sources]
torch = { index = "pytorch-cu113" }
torchvision = { index = "pytorch-cu113" }
torchaudio = { index = "pytorch-cu113" }

torch-scatter = { index = "pyg-cu113" }
torch-sparse = { index = "pyg-cu113" }
torch-cluster = { index = "pyg-cu113" }
torch-spline-conv = { index = "pyg-cu113" }

[[tool.uv.index]]
name = "pytorch-cu113"
url = "https://download.pytorch.org/whl/cu113"
explicit = true

[[tool.uv.index]]
name = "pyg-cu113"
url = "https://data.pyg.org/whl/torch-1.11.0+cu113.html"
format = "flat"
explicit = true
